--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ obj/
 /packages/
 riderModule.iml
 /_ReSharper.Caches/
+/LivingDoc.html
+/SpecFlowPlaywright.sln.DotSettings.user
+/Features/EaAppTest.feature.cs
